--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">My Application</string>
     <string name="novel">Novel</string>
     <string name="movie">Movie</string>
+    <string name="detailnovel">Novel Detail</string>
+    <string name="detailmovie">Movie Detail</string>
 </resources>
